Fix marketplace 'you own' overlap, closes #11

--- a/src/modules/better-shops/styles.css
+++ b/src/modules/better-shops/styles.css
@@ -169,7 +169,6 @@ a.itemPurchaseView-action-form-button.sell {
   align-items: center;
   height: 28px;
   font-style: italic;
-  background-color: #f9f9f9;
 }
 
 span.itemPurchaseView-action-owned {
